oxiplate-derive/tests/broken/derive/missing-attribute.stderr
error: proc-macro derive panicked
 --> tests/broken/derive/missing-attribute.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: not implemented: Must specify an attribute
